Proyecto/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    SUMA

Grammar

Rule 0     S' -> Start
Rule 1     Start -> code
Rule 2     code -> INICIO DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento
Rule 3     cuerpo -> variable
Rule 4     cuerpo -> expresion
Rule 5     variable -> variable1 cuerpo
Rule 6     variable -> variable2 cuerpo
Rule 7     variable -> empty empty
Rule 8     variable1 -> DCL ID PUNTOCOMA
Rule 9     variable2 -> DCL ID DEFAULT NUMERO PUNTOCOMA
Rule 10    expresion -> condicion1 expresion
Rule 11    expresion -> condicion2 expresion
Rule 12    expresion -> repita expresion
Rule 13    expresion -> hacer expresion
Rule 14    expresion -> funcion expresion
Rule 15    expresion -> llamarProc expresion
Rule 16    expresion -> empty empty
Rule 17    condicion1 -> ENCASO cond1Aux1 FINENCASO PUNTOCOMA
Rule 18    cond1Aux1 -> cond1Aux2 SINO LLAVE_IZQ expresion LLAVE_DER
Rule 19    cond1Aux1 -> empty empty empty empty empty
Rule 20    cond1Aux2 -> CUANDO ID condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER cond1Aux2
Rule 21    cond1Aux2 -> empty empty empty empty empty empty empty empty empty
Rule 22    condicion2 -> ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
Rule 23    cond2Aux1 -> cond2Aux2 SINO LLAVE_IZQ expresion LLAVE_DER
Rule 24    cond2Aux1 -> empty empty empty empty empty
Rule 25    cond2Aux2 -> CUANDO condicion sentencia ENTONS LLAVE_IZQ expresion LLAVE_DER cond2Aux2
Rule 26    cond2Aux2 -> empty empty empty empty empty empty empty empty
Rule 27    condicion -> IGUAL
Rule 28    condicion -> MAYOR
Rule 29    condicion -> MENOR
Rule 30    condicion -> DIFERENTE
Rule 31    condicion -> MAYORIGUAL
Rule 32    condicion -> MENORIGUAL
Rule 33    sentencia -> ID
Rule 34    sentencia -> NUMERO
Rule 35    repita -> REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
Rule 36    hacer -> DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
Rule 37    funcion -> Aleatorio
Rule 38    funcion -> Mover
Rule 39    funcion -> funcionAlge
Rule 40    Aleatorio -> ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
Rule 41    Mover -> MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
Rule 42    paramMover -> AF
Rule 43    paramMover -> F
Rule 44    paramMover -> DFA
Rule 45    paramMover -> IFA
Rule 46    paramMover -> DFB
Rule 47    paramMover -> IFB
Rule 48    paramMover -> A
Rule 49    paramMover -> DAA
Rule 50    paramMover -> IAA
Rule 51    paramMover -> DAB
Rule 52    paramMover -> IAB
Rule 53    paramMover -> AA
Rule 54    funcionAlge -> INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 55    funcionAlge -> DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 56    funcionAlge -> INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
Rule 57    procedimiento -> PROC ID PARENTESIS_IZQ parametro PARENTESIS_DER INICIOPROC DOSPUNTOS expresion FINPROC PUNTOCOMA procedimiento
Rule 58    procedimiento -> empty empty empty empty empty empty empty empty empty empty empty
Rule 59    parametro -> ID COMA parametro
Rule 60    parametro -> ID empty empty
Rule 61    parametro -> NUMERO COMA parametro
Rule 62    parametro -> NUMERO empty empty
Rule 63    parametro -> empty empty empty
Rule 64    llamarProc -> LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
Rule 65    empty -> <empty>

Terminals, with rules where they appear

A                    : 48
AA                   : 53
AF                   : 42
ALEATORIO            : 40
COMA                 : 54 55 56 59 61
CUANDO               : 20 25
DAA                  : 49
DAB                  : 51
DCL                  : 8 9
DEC                  : 55
DEFAULT              : 9
DESDE                : 36
DFA                  : 44
DFB                  : 46
DIFERENTE            : 30
DOSPUNTOS            : 2 57
ENCASO               : 17 22
ENTONS               : 20 25
F                    : 43
FIN                  : 2
FINDESDE             : 36
FINENCASO            : 17 22
FINPROC              : 57
HAGA                 : 36
HASTA                : 36
HASTAENCONTRAR       : 35
IAA                  : 50
IAB                  : 52
ID                   : 8 9 20 22 33 35 36 54 55 56 57 59 60 64
IFA                  : 45
IFB                  : 47
IGUAL                : 27 36
INC                  : 54
INI                  : 56
INICIO               : 2
INICIOPROC           : 57
LLAMAR               : 64
LLAVE_DER            : 18 20 23 25 35 36
LLAVE_IZQ            : 18 20 23 25 35 36
MAYOR                : 28
MAYORIGUAL           : 31
MENOR                : 29
MENORIGUAL           : 32
MOVER                : 41
NUMERO               : 9 34 61 62
PARENTESIS_DER       : 40 41 54 55 56 57 64
PARENTESIS_IZQ       : 40 41 54 55 56 57 64
PROC                 : 57
PUNTOCOMA            : 2 8 9 17 22 35 36 40 41 54 55 56 57 64
REPITA               : 35
SINO                 : 18 23
SUMA                 : 
error                : 

Nonterminals, with rules where they appear

Aleatorio            : 37
Mover                : 38
Start                : 0
code                 : 1
cond1Aux1            : 17
cond1Aux2            : 18 20
cond2Aux1            : 22
cond2Aux2            : 23 25
condicion            : 20 25 35
condicion1           : 10
condicion2           : 11
cuerpo               : 2 5 6
empty                : 7 7 16 16 19 19 19 19 19 21 21 21 21 21 21 21 21 21 24 24 24 24 24 26 26 26 26 26 26 26 26 58 58 58 58 58 58 58 58 58 58 58 60 60 62 62 63 63 63
expresion            : 4 10 11 12 13 14 15 18 20 23 25 35 36 57
funcion              : 14
funcionAlge          : 39
hacer                : 13
llamarProc           : 15
paramMover           : 41
parametro            : 57 59 61 64
procedimiento        : 2 57
repita               : 12
sentencia            : 20 25 35 36 36 54 55 56
variable             : 3
variable1            : 5
variable2            : 6

Parsing method: LALR

state 0

    (0) S' -> . Start
    (1) Start -> . code
    (2) code -> . INICIO DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento

    INICIO          shift and go to state 3

    Start                          shift and go to state 1
    code                           shift and go to state 2

state 1

    (0) S' -> Start .



state 2

    (1) Start -> code .

    $end            reduce using rule 1 (Start -> code .)


state 3

    (2) code -> INICIO . DOSPUNTOS cuerpo FIN PUNTOCOMA procedimiento

    DOSPUNTOS       shift and go to state 4


state 4

    (2) code -> INICIO DOSPUNTOS . cuerpo FIN PUNTOCOMA procedimiento
    (3) cuerpo -> . variable
    (4) cuerpo -> . expresion
    (5) variable -> . variable1 cuerpo
    (6) variable -> . variable2 cuerpo
    (7) variable -> . empty empty
    (10) expresion -> . condicion1 expresion
    (11) expresion -> . condicion2 expresion
    (12) expresion -> . repita expresion
    (13) expresion -> . hacer expresion
    (14) expresion -> . funcion expresion
    (15) expresion -> . llamarProc expresion
    (16) expresion -> . empty empty
    (8) variable1 -> . DCL ID PUNTOCOMA
    (9) variable2 -> . DCL ID DEFAULT NUMERO PUNTOCOMA
    (65) empty -> .
    (17) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (22) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (35) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (36) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (37) funcion -> . Aleatorio
    (38) funcion -> . Mover
    (39) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (40) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (41) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (54) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    DCL             shift and go to state 17
    FIN             reduce using rule 65 (empty -> .)
    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    LLAMAR          shift and go to state 24
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

    cuerpo                         shift and go to state 5
    variable                       shift and go to state 6
    expresion                      shift and go to state 7
    variable1                      shift and go to state 8
    variable2                      shift and go to state 9
    empty                          shift and go to state 10
    condicion1                     shift and go to state 11
    condicion2                     shift and go to state 12
    repita                         shift and go to state 13
    hacer                          shift and go to state 14
    funcion                        shift and go to state 15
    llamarProc                     shift and go to state 16
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 5

    (2) code -> INICIO DOSPUNTOS cuerpo . FIN PUNTOCOMA procedimiento

    FIN             shift and go to state 30


state 6

    (3) cuerpo -> variable .

    FIN             reduce using rule 3 (cuerpo -> variable .)


state 7

    (4) cuerpo -> expresion .

    FIN             reduce using rule 4 (cuerpo -> expresion .)


state 8

    (5) variable -> variable1 . cuerpo
    (3) cuerpo -> . variable
    (4) cuerpo -> . expresion
    (5) variable -> . variable1 cuerpo
    (6) variable -> . variable2 cuerpo
    (7) variable -> . empty empty
    (10) expresion -> . condicion1 expresion
    (11) expresion -> . condicion2 expresion
    (12) expresion -> . repita expresion
    (13) expresion -> . hacer expresion
    (14) expresion -> . funcion expresion
    (15) expresion -> . llamarProc expresion
    (16) expresion -> . empty empty
    (8) variable1 -> . DCL ID PUNTOCOMA
    (9) variable2 -> . DCL ID DEFAULT NUMERO PUNTOCOMA
    (65) empty -> .
    (17) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (22) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (35) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (36) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (37) funcion -> . Aleatorio
    (38) funcion -> . Mover
    (39) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (40) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (41) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (54) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    DCL             shift and go to state 17
    FIN             reduce using rule 65 (empty -> .)
    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    LLAMAR          shift and go to state 24
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

    variable1                      shift and go to state 8
    cuerpo                         shift and go to state 31
    variable                       shift and go to state 6
    expresion                      shift and go to state 7
    variable2                      shift and go to state 9
    empty                          shift and go to state 10
    condicion1                     shift and go to state 11
    condicion2                     shift and go to state 12
    repita                         shift and go to state 13
    hacer                          shift and go to state 14
    funcion                        shift and go to state 15
    llamarProc                     shift and go to state 16
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 9

    (6) variable -> variable2 . cuerpo
    (3) cuerpo -> . variable
    (4) cuerpo -> . expresion
    (5) variable -> . variable1 cuerpo
    (6) variable -> . variable2 cuerpo
    (7) variable -> . empty empty
    (10) expresion -> . condicion1 expresion
    (11) expresion -> . condicion2 expresion
    (12) expresion -> . repita expresion
    (13) expresion -> . hacer expresion
    (14) expresion -> . funcion expresion
    (15) expresion -> . llamarProc expresion
    (16) expresion -> . empty empty
    (8) variable1 -> . DCL ID PUNTOCOMA
    (9) variable2 -> . DCL ID DEFAULT NUMERO PUNTOCOMA
    (65) empty -> .
    (17) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (22) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (35) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (36) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (37) funcion -> . Aleatorio
    (38) funcion -> . Mover
    (39) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (40) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (41) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (54) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    DCL             shift and go to state 17
    FIN             reduce using rule 65 (empty -> .)
    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    LLAMAR          shift and go to state 24
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

    variable2                      shift and go to state 9
    cuerpo                         shift and go to state 32
    variable                       shift and go to state 6
    expresion                      shift and go to state 7
    variable1                      shift and go to state 8
    empty                          shift and go to state 10
    condicion1                     shift and go to state 11
    condicion2                     shift and go to state 12
    repita                         shift and go to state 13
    hacer                          shift and go to state 14
    funcion                        shift and go to state 15
    llamarProc                     shift and go to state 16
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 10

    (7) variable -> empty . empty
    (16) expresion -> empty . empty
    (65) empty -> .

    FIN             reduce using rule 65 (empty -> .)

    empty                          shift and go to state 33

state 11

    (10) expresion -> condicion1 . expresion
    (10) expresion -> . condicion1 expresion
    (11) expresion -> . condicion2 expresion
    (12) expresion -> . repita expresion
    (13) expresion -> . hacer expresion
    (14) expresion -> . funcion expresion
    (15) expresion -> . llamarProc expresion
    (16) expresion -> . empty empty
    (17) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (22) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (35) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (36) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (37) funcion -> . Aleatorio
    (38) funcion -> . Mover
    (39) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (40) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (41) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (54) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    LLAMAR          shift and go to state 24
    FIN             reduce using rule 65 (empty -> .)
    LLAVE_DER       reduce using rule 65 (empty -> .)
    FINPROC         reduce using rule 65 (empty -> .)
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

    condicion1                     shift and go to state 11
    expresion                      shift and go to state 34
    condicion2                     shift and go to state 12
    repita                         shift and go to state 13
    hacer                          shift and go to state 14
    funcion                        shift and go to state 15
    llamarProc                     shift and go to state 16
    empty                          shift and go to state 35
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 12

    (11) expresion -> condicion2 . expresion
    (10) expresion -> . condicion1 expresion
    (11) expresion -> . condicion2 expresion
    (12) expresion -> . repita expresion
    (13) expresion -> . hacer expresion
    (14) expresion -> . funcion expresion
    (15) expresion -> . llamarProc expresion
    (16) expresion -> . empty empty
    (17) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (22) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (35) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (36) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (37) funcion -> . Aleatorio
    (38) funcion -> . Mover
    (39) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (40) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (41) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (54) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    LLAMAR          shift and go to state 24
    FIN             reduce using rule 65 (empty -> .)
    LLAVE_DER       reduce using rule 65 (empty -> .)
    FINPROC         reduce using rule 65 (empty -> .)
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

    condicion2                     shift and go to state 12
    expresion                      shift and go to state 36
    condicion1                     shift and go to state 11
    repita                         shift and go to state 13
    hacer                          shift and go to state 14
    funcion                        shift and go to state 15
    llamarProc                     shift and go to state 16
    empty                          shift and go to state 35
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 13

    (12) expresion -> repita . expresion
    (10) expresion -> . condicion1 expresion
    (11) expresion -> . condicion2 expresion
    (12) expresion -> . repita expresion
    (13) expresion -> . hacer expresion
    (14) expresion -> . funcion expresion
    (15) expresion -> . llamarProc expresion
    (16) expresion -> . empty empty
    (17) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (22) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (35) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (36) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (37) funcion -> . Aleatorio
    (38) funcion -> . Mover
    (39) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (40) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (41) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (54) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
    REPITA          shift and go to state 19
    DESDE           shift and go to state 20
    LLAMAR          shift and go to state 24
    FIN             reduce using rule 65 (empty -> .)
    LLAVE_DER       reduce using rule 65 (empty -> .)
    FINPROC         reduce using rule 65 (empty -> .)
    ALEATORIO       shift and go to state 25
    MOVER           shift and go to state 26
    INC             shift and go to state 27
    DEC             shift and go to state 28
    INI             shift and go to state 29

    repita                         shift and go to state 13
    expresion                      shift and go to state 37
    condicion1                     shift and go to state 11
    condicion2                     shift and go to state 12
    hacer                          shift and go to state 14
    funcion                        shift and go to state 15
    llamarProc                     shift and go to state 16
    empty                          shift and go to state 35
    Aleatorio                      shift and go to state 21
    Mover                          shift and go to state 22
    funcionAlge                    shift and go to state 23

state 14

    (13) expresion -> hacer . expresion
    (10) expresion -> . condicion1 expresion
    (11) expresion -> . condicion2 expresion
    (12) expresion -> . repita expresion
    (13) expresion -> . hacer expresion
    (14) expresion -> . funcion expresion
    (15) expresion -> . llamarProc expresion
    (16) expresion -> . empty empty
    (17) condicion1 -> . ENCASO cond1Aux1 FINENCASO PUNTOCOMA
    (22) condicion2 -> . ENCASO ID cond2Aux1 FINENCASO PUNTOCOMA
    (35) repita -> . REPITA LLAVE_IZQ expresion LLAVE_DER HASTAENCONTRAR ID condicion sentencia PUNTOCOMA
    (36) hacer -> . DESDE ID IGUAL sentencia HASTA sentencia HAGA LLAVE_IZQ expresion LLAVE_DER FINDESDE PUNTOCOMA
    (37) funcion -> . Aleatorio
    (38) funcion -> . Mover
    (39) funcion -> . funcionAlge
    (64) llamarProc -> . LLAMAR ID PARENTESIS_IZQ parametro PARENTESIS_DER PUNTOCOMA
    (65) empty -> .
    (40) Aleatorio -> . ALEATORIO PARENTESIS_IZQ PARENTESIS_DER PUNTOCOMA
    (41) Mover -> . MOVER PARENTESIS_IZQ paramMover PARENTESIS_DER PUNTOCOMA
    (54) funcionAlge -> . INC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (55) funcionAlge -> . DEC PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA
    (56) funcionAlge -> . INI PARENTESIS_IZQ ID COMA sentencia PARENTESIS_DER PUNTOCOMA

    ENCASO          shift and go to state 18
